<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".running.EditRunningRecordActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/text_input_record"
        android:hint="@string/record_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:text="@string/record_text_input_edit_text"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/text_input_date"
        android:hint="@string/record_text_input_layout_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/text_input_record"
        android:layout_marginTop="24dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:text="@string/edit_text_date_text"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/text_input_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_save"
        android:layout_marginTop="12dp"
        android:text="@string/delete"/>

    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_clear"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/clear_record_button_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>